--- a/Web/templates/redact_subproject.html
+++ b/Web/templates/redact_subproject.html
@@ -53,7 +53,7 @@
             <button type="submit" class="btn btn-primary">Удалить раздел</button>
         </div>
     </form>
-    <h2> Статус раздела:   </h2>
+    <h2> Статус раздела:  {%if subproject.done == "True" %}выполнен{%else%}активный{%endif%} </h2>
     <form method = "POST">
     <input type="hidden" name="done" value="{{ subproject.id }}" />
     <button type="submit" class="btn btn-primary">Изменить статус раздела</button>
