--- a/Web/templates/other_projects.html
+++ b/Web/templates/other_projects.html
@@ -7,7 +7,7 @@
 {% for project in available_projects %}
 <ul class="list-group">
     <li class="list-group-item">
-        <h1>{{ project.name }} </h1>
+        <h1><span {% if project.done == "True" %} style="text-decoration:line-through" {% endif %}>{{ project.name }}</span>{% if project.done == "True" %} - Выполнен{% endif %} </h1>
         {{ project.shortDescription}} </br>
         <form action = {{ url_for('.showProject', index=project.id) }} method = "POST">
         <input type="hidden" name="project" value="{{ project.id }}" />
