Fixed incorrect spelling for subprojects

--- a/Web/templates/redact_subproject.html
+++ b/Web/templates/redact_subproject.html
@@ -6,7 +6,7 @@
 <div class="container" id='sign-up-container'>
 <div class="row pt-4 mt-4 mb-4">
 <div class="col-8">
-    <h1> Название проекта:   </h1>
+    <h1> Название раздела:   </h1>
     <form method="POST">
         <div class="form-group">
             <textarea
@@ -19,7 +19,7 @@
             <button type="submit" class="btn btn-primary">Применить изменения</button>
         </div>
     </form>
-    <h2> Краткое описание проекта:   </h2>
+    <h2> Краткое описание раздела:   </h2>
     <form method="POST">
         <div class="form-group">
             <textarea
